// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Line breaking after filepath with errors  1`] = `
{
  "stderr": "[error] invalid-1.js: SyntaxError: Unexpected token (1:8)
[error] > 1 | foo (+-) bar
[error]     |        ^
[error]   2 |
[error] invalid-2.js: SyntaxError: Unexpected token (1:8)
[error] > 1 | foo (+-) bar
[error]     |        ^
[error]   2 |
[error] No parser could be inferred for file "<cli>/syntax-errors/invalid-2.unknown".",
  "stdout": "invalid-1.js
invalid-2.js
invalid-2.unknown
valid-1.js
[[Clear text(process.stdout): valid-1.js]]
function foo() {}",
  "write": [],
}
`;

exports[`Line breaking after filepath with errors  2`] = `
{
  "stderr": "[error] invalid-1.js: SyntaxError: Unexpected token (1:8)
[error] > 1 | foo (+-) bar
[error]     |        ^
[error]   2 |
[error] invalid-2.js: SyntaxError: Unexpected token (1:8)
[error] > 1 | foo (+-) bar
[error]     |        ^
[error]   2 |
[error] No parser could be inferred for file "<cli>/syntax-errors/invalid-2.unknown".",
  "stdout": "invalid-1.js
invalid-2.js
invalid-2.unknown
valid-1.js
[[Clear text(process.stdout): valid-1.js]]",
  "write": [],
}
`;

exports[`Line breaking after filepath with errors  3`] = `
{
  "stderr": "[error] invalid-1.js: SyntaxError: Unexpected token (1:8)
[error] > 1 | foo (+-) bar
[error]     |        ^
[error]   2 |
[error] invalid-2.js: SyntaxError: Unexpected token (1:8)
[error] > 1 | foo (+-) bar
[error]     |        ^
[error]   2 |
[error] No parser could be inferred for file "<cli>/syntax-errors/invalid-2.unknown".",
  "stdout": "Checking formatting...
invalid-1.js
invalid-2.js
invalid-2.unknown
valid-1.js
[[Clear text(process.stdout): valid-1.js]]
Error occurred when checking code style in 3 files.",
  "write": [],
}
`;

exports[`Line breaking after filepath with errors  4`] = `
{
  "stderr": "[error] invalid-1.js: SyntaxError: Unexpected token (1:8)
[error] > 1 | foo (+-) bar
[error]     |        ^
[error]   2 |
[error] invalid-2.js: SyntaxError: Unexpected token (1:8)
[error] > 1 | foo (+-) bar
[error]     |        ^
[error]   2 |
[error] No parser could be inferred for file "<cli>/syntax-errors/invalid-2.unknown".",
  "stdout": "invalid-1.js
invalid-2.js
invalid-2.unknown
valid-1.js
[[Clear text(process.stdout): valid-1.js]]
valid-1.js 0ms (unchanged)",
  "write": [],
}
`;
